# pytoclaw

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pyclaw/agent/: context.py  instance.py  loop.py
src/pyclaw/channels/: dingtalk.py  feishu.py  telegram.py  whatsapp.py
src/pyclaw/cli/: agent_cmd.py  gateway_cmd.py  onboard_cmd.py  skills_cmd.py
src/pyclaw/config/: models.py
src/pyclaw/providers/: anthropic_provider.py  base.py  openai_provider.py
src/pyclaw/skills/: __init__.py  clawhub.py  creator.py  frontmatter.py  github_installer.py  loader.py  models.py  registry.py  search_cache.py
src/pyclaw/skills/builtins/: __init__.py
src/pyclaw/skills/builtins/calculator/: SKILL.md
src/pyclaw/skills/builtins/skill-creator/: SKILL.md
src/pyclaw/skills/builtins/weather/: SKILL.md
src/pyclaw/tools/: skills_tools.py  spawn_tool.py
src/pytoclaw/agent/: loop.py
src/pytoclaw/auth/: credentials.py  openai_oauth.py  pkce.py
src/pytoclaw/cli/: onboard_cmd.py
src/pytoclaw/providers/: codex_provider.py  factory.py
tests/test_auth/: test_credentials.py  test_openai_oauth.py  test_pkce.py
tests/test_channels/: test_whatsapp.py
tests/test_skills/: test_creator.py  test_frontmatter.py  test_loader.py  test_registry.py  test_search_cache.py
